--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,6 +87,10 @@ services:
       - THREEMA=https://threema.ch/en/
       - STREAMLABS=https://streamlabs.com/
       - PRIVATEBIN=https://privatebin.net/ 
+      - AMAZON_AFFILIATE=https://affiliate-program.amazon.co.uk/
+      - AMAZON_WISHLIST=https://www.amazon.co.uk/b?node=22758010031
+      - APPLE_MUSIC=https://www.apple.com/uk/apple-music/
+      - STATUS=https://status.im/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
