--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       - UNTAPPD=https://untappd.com/
       - BUTTON_TARGET=_blank
       - INSTANTGAMING=https://www.instant-gaming.com/
+      - GHOST=https://ghost.org/
       - TRAKT=https://trakt.tv
       - CASHAPP=https://cash.app/
       - TEESPRING=https://teespring.com/
