--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@
 version: "3.0"
 services:
   little-link:
-    image: ghcr.io/techno-tim/littlelink-server:latest
+    image: docker.io/library/links
+    # ghcr.io/techno-tim/littlelink-server:latest
     # dockerhub is also supported timothystewart6/littlelink-server
     #image: timothystewart6/littlelink-server:latest
     container_name: littlelink-server
@@ -93,6 +94,7 @@ services:
       - APPLE_MUSIC=https://www.apple.com/uk/apple-music/
       - STATUS=https://status.im/
       - MATRIX=https://matrix.to/
+      - ANILIST=https://anilist.co/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
