--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,7 @@ services:
       - APPLE_MUSIC=https://www.apple.com/uk/apple-music/
       - STATUS=https://status.im/
       - MATRIX=https://matrix.to/
+      - ANILIST=https://anilist.co/
       - GITBUCKET=https://gitbucket.github.io/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
