--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
       - MATRIX=https://matrix.to/
       - ANILIST=https://anilist.co/
       - GITBUCKET=https://gitbucket.github.io/
+      - SHAZAM=https://www.shazam.com/myshazam
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
