--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       - SESSION=https://getsession.org/
       - THREEMA=https://threema.ch/en/
       - STREAMLABS=https://streamlabs.com/
-      - PRIVATEBIN=https://privatebin.net/ 
+      - PRIVATEBIN=https://privatebin.net/
       - AMAZON_AFFILIATE=https://affiliate-program.amazon.co.uk/
       - AMAZON_WISHLIST=https://www.amazon.co.uk/b?node=22758010031
       - APPLE_MUSIC=https://www.apple.com/uk/apple-music/
@@ -107,6 +107,7 @@ services:
       - TWITTER_IMAGE=https://pbs.twimg.com/profile_images/1286144221217316864/qIAsKOpB_400x400.jpg
       - TWITTER_SITE=@TechnoTimLive
       - TWITTER_CREATOR=@TechnoTimLive
+      - SHARE=https://technotim.live
     ports:
       - 8080:3000
     restart: unless-stopped
