--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,8 @@ services:
       - ANILIST=https://anilist.co/
       - GITBUCKET=https://gitbucket.github.io/
       - SHAZAM=https://www.shazam.com/myshazam
+      - TPDB=https://theposterdb.com/
+      - FLICKR=https://www.flickr.com/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
