--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@
 version: "3.0"
 services:
   little-link:
-    image: ghcr.io/techno-tim/littlelink-server:latest
+    image: docker.io/library/links
+    # ghcr.io/techno-tim/littlelink-server:latest
     # dockerhub is also supported timothystewart6/littlelink-server
     #image: timothystewart6/littlelink-server:latest
     container_name: littlelink-server
@@ -99,6 +100,9 @@ services:
       - TPDB=https://theposterdb.com/
       - FLICKR=https://www.flickr.com/
       - OSU=https://osu.ppy.sh/users/
+      - LINE=https://line.me/en/
+      - KAKAOTALK=https://www.kakaocorp.com/page/service/service/KakaoTalk?lang=ko
+      - DESIGNBYHUMANS=https://www.designbyhumans.com/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
