--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,9 @@ services:
       - TPDB=https://theposterdb.com/
       - FLICKR=https://www.flickr.com/
       - OSU=https://osu.ppy.sh/users/
+      - LINE=https://line.me/en/
+      - KAKAOTALK=https://www.kakaocorp.com/page/service/service/KakaoTalk?lang=ko
+      - DESIGNBYHUMANS=https://www.designbyhumans.com/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
