--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -36,7 +36,7 @@ body:
     attributes:
       label: Expected Result
       description: Please explain the bug, include any errors
-      placeholder: Bug report
+      placeholder: The expected result
     validations:
       required: true
 
