--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,7 @@ services:
       - KAKAOTALK=https://www.kakaocorp.com/page/service/service/KakaoTalk?lang=ko
       - DESIGNBYHUMANS=https://www.designbyhumans.com/
       - DOCKERHUB=https://hub.docker.com/
+      - MYANIMELIST=https://myanimelist.net/
       - OG_SITE_NAME=Techno Tim Live (OG)
       - OG_TITLE=Techno Tim (OG)
       - OG_DESCRIPTION=Techno Tim Link page (OG)
