--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "serialize-javascript": "^6.0.0"
+    "serialize-javascript": "^6.0.0",
+    "helmet": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
