fix(actions): Remove version from name

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,16 +11,13 @@ on:
 jobs:
   js-install-and-test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [v16.17.1]  
     steps:
     - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # 3.0.2
 
     - name: Use Node.js
       uses: actions/setup-node@2fddd8803e2f5c9604345a0b591c3020ee971a93
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: v16.17.1
     - name: Install Dependencies, Test, and Build
       run: |
         yarn install --frozen-lockfile --check-files --network-timeout 600000
