feat: Add 500px (#264)
* feat: Add 500px

* fix: Image

* fix: Move to bottom

* fix: Lint

* fix: Move logo

* fix: Move to bottom for real

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,6 +119,8 @@ services:
       - TWITTER_SITE=@TechnoTimLive
       - TWITTER_CREATOR=@TechnoTimLive
       - SHARE=https://technotim.live
+      - FIVEHUNDREDPX=https://500px.com/
+
     ports:
       - 8080:3000
     restart: unless-stopped
