--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,7 @@ services:
       - TWITTER_CREATOR=@TechnoTimLive
       - SHARE=https://technotim.live
       - FIVEHUNDREDPX=https://500px.com/
+      - PRINTABLES=https://www.printables.com
 
     ports:
       - 8080:3000
