Add Podcasts (Apple Podcasts, Google Podcasts, Pocket Casts & Overcast) (#507)
* Add Apple Podcasts

* Add Google Podcasts

* Add Pocket Casts

* Add Overcast

* Fixing Typos

* Reorder new Buttons at the end

* fix SNAKE_CASE

* Add Apple Podcasts

* Add Google Podcasts

* Add Pocket Casts

* Add Overcast

* Fixing Typos

* Reorder new Buttons at the end

* fix SNAKE_CASE

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,6 +129,10 @@ services:
       - VRCHAT=https://vrchat.com
       - X=https://x.com
       - CODEWARS=https://www.codewars.com
+      - APPLE_PODCASTS=https://podcasts.apple.com/de/podcast/NAME/id000000000
+      - GOOGLE_PODCASTS=https://podcasts.google.com/feed/XYZ
+      - POCKET_CASTS=https://pca.st/XYZ
+      - OVERCAST=https://overcast.fm/itunes00000000
     ports:
       - 8080:3000
     restart: unless-stopped
