--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -133,6 +133,7 @@ services:
       - GOOGLE_PODCASTS=https://podcasts.google.com/feed/XYZ
       - POCKET_CASTS=https://pca.st/XYZ
       - OVERCAST=https://overcast.fm/itunes00000000
+      - RSS=https://example.com/rss
     ports:
       - 8080:3000
     restart: unless-stopped
