fix(package): add resolutions for packages that don't support ESM

--- a/package.json
+++ b/package.json
@@ -56,5 +56,9 @@
     "url": "^0.11.3",
     "webpack": "^5.88.2",
     "webpack-dev-server": "^4.15.1"
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "table": "6.8.0"
   }
 }
