--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
-    "helmet": "^6.2.0",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -38,24 +38,27 @@
     "@babel/preset-react": "^7.23.3",
     "babel-preset-razzle": "^4.2.18",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx": "^0.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "html-webpack-plugin": "^5.6.0",
-    "markdownlint-cli": "^0.33.0",
+    "markdownlint-cli": "^0.38.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^2.8.8",
+    "prettier": "^3.1.1",
     "razzle": "^4.2.18",
     "razzle-dev-utils": "^4.2.18",
     "react-test-renderer": "^18.2.0",
-    "stylelint": "^15.11.0",
-    "stylelint-config-prettier": "^9.0.5",
+    "stylelint": "^16.1.0",
     "url": "^0.11.3",
     "webpack": "^5.88.2",
     "webpack-dev-server": "^4.15.1"
+  },
+  "resolutions": {
+    "string-width": "4.2.3",
+    "table": "6.8.0"
   }
 }
