--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,6 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # 3.0.0
-        with:
-          platforms: linux/amd64,linux/arm64 # have to disable linux/arm/v7 for now, see https://github.com/nodejs/docker-node/issues/1798
 
       -
         name: Login to GitHub Container Registry
@@ -58,7 +56,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64 # have to disable linux/arm/v7 linux/arm/v6 for now, see https://github.com/nodejs/docker-node/issues/1798
           push: true
           tags: |
             ghcr.io/techno-tim/littlelink-server:latest
