feat: Add Audius

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -134,7 +134,7 @@ services:
       - POCKET_CASTS=https://pca.st/XYZ
       - OVERCAST=https://overcast.fm/itunes00000000
       - RSS=https://example.com/rss
-    ports:
+      - AUDIUS=https://audius.co/
       - 8080:3000
     restart: unless-stopped
     security_opt:
