feat: Add ORCID

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,7 +136,8 @@ services:
       - RSS=https://example.com/rss
       - AUDIUS=https://audius.co/
       - BANDCAMP=https://bandcamp.com/
-      - FORGEJO=https://forgejo.org/      
+      - FORGEJO=https://forgejo.org/
+      - ORCID=https://orcid.org/
       - 8080:3000
     restart: unless-stopped
     security_opt:
