--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,7 @@ services:
       - ORCID=https://orcid.org/
       - CREDLY=https://www.credly.com/
       - SEMANTICSCHOLAR=https://www.semanticscholar.org/
+      - GOOGLESCHOLAR=https://scholar.google.co.uk/
     ports:
       - 8080:3000
     restart: unless-stopped
