--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@
 version: "3.0"
 services:
   little-link:
-    image: docker.io/library/tag
-    # ghcr.io/techno-tim/littlelink-server:latest
+    image: ghcr.io/techno-tim/littlelink-server:latest
     # dockerhub is also supported timothystewart6/littlelink-server
     #image: timothystewart6/littlelink-server:latest
     container_name: littlelink-server
