feat: Add Mixcloud

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,6 +142,7 @@ services:
       - SEMANTICSCHOLAR=https://www.semanticscholar.org/
       - GOOGLESCHOLAR=https://scholar.google.co.uk/
       - SIMPLEX=https://simplex.chat/
+      - MIXCLOUD=https://www.mixcloud.com/
     ports:
       - 8080:3000
     restart: unless-stopped
