--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,6 +148,10 @@ services:
       - TIDAL=https://tidal.com/
       - THESTORYGRAPH=https://www.thestorygraph.com/
       - GEOCACHING=https://www.geocaching.com/play
+      - NEOCITIES=https://neocities.org/
+      - VIBER=https://www.viber.com/en/
+      - SPACEHEY=https://spacehey.com/
+      - DREAMWIDTH=https://www.dreamwidth.org/login
     ports:
       - 8080:3000
     restart: unless-stopped
