fix docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@
 version: "3.0"
 services:
   little-link:
-    image: sha256:2a5a64e2955852cd0647d16e08ca5c70eb7defc370c7a4ca2200a10c0239bd90
-    # ghcr.io/techno-tim/littlelink-server:latest
+    image: ghcr.io/techno-tim/littlelink-server:latest
     # dockerhub is also supported timothystewart6/littlelink-server
     #image: timothystewart6/littlelink-server:latest
     container_name: littlelink-server
